docker-k8s-workshop/day-3/service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-clusterip
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
