docker-k8s-workshop/day-3/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-nodeport
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      
  type: NodePort
