docker-k8s-workshop/day-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: python-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-app-clusterip
                port:
                  number: 80
